# gpt-obsidian

./: .gitignore  README.md  main.py  pyproject.toml
src/gpt_obsidian/: __main__.py  attachments.py  bases.py  cli.py  export_reader.py  index_store.py  indexes.py  insights.py  markdown_renderer.py  models.py  reporting.py  topics.py  transform.py  utils.py
tests/: test_attachments.py  test_cli_integration.py  test_env_loader.py  test_export_reader.py  test_insights.py  test_markdown_renderer.py  test_transform.py
