[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gpt-obsidian"
version = "0.1.0"
description = "Convert ChatGPT exports into an Obsidian vault"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Rohan Singh" }]
dependencies = []

[project.scripts]
gpt-obsidian = "gpt_obsidian.cli:run"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
